[gd_scene load_steps=46 format=3 uid="uid://cov1cfiycc68x"]

[ext_resource type="Script" uid="uid://sh5poejd1yyr" path="res://Scripts/Gameplay/Player.gd" id="1_rpqav"]
[ext_resource type="Script" uid="uid://3u66cb4a4hqt" path="res://Scripts/Core/Hitbox.gd" id="4_xixlo"]
[ext_resource type="Texture2D" uid="uid://d2lu2slkgxvph" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-00.png" id="14_opjds"]
[ext_resource type="Texture2D" uid="uid://bcx67melgu746" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-01.png" id="15_6626w"]
[ext_resource type="Texture2D" uid="uid://bdunroj2at853" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-02.png" id="16_867uf"]
[ext_resource type="Texture2D" uid="uid://bcg588dmtf8ww" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-03.png" id="17_6ilcf"]
[ext_resource type="Texture2D" uid="uid://brx4tut8rutsl" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-04.png" id="18_6id3a"]
[ext_resource type="Texture2D" uid="uid://dn7731udkiwbr" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-05.png" id="19_w1x0d"]
[ext_resource type="Texture2D" uid="uid://ey2ykjogk0c" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-06.png" id="20_ovjwc"]
[ext_resource type="Texture2D" uid="uid://b23lxer1kxbcr" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-07.png" id="21_jawh0"]
[ext_resource type="Texture2D" uid="uid://7nqpnbfx0qbi" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-08.png" id="22_jq6en"]
[ext_resource type="Texture2D" uid="uid://c56dk366x7t08" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-09.png" id="23_1g8ls"]
[ext_resource type="Texture2D" uid="uid://b1cwnb12qrfk7" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-10.png" id="24_4wp3f"]
[ext_resource type="Texture2D" uid="uid://b2qqq0b3d3hog" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-11.png" id="25_x1vvj"]
[ext_resource type="Texture2D" uid="uid://bwkbvhjguou0e" path="res://Assets/主角/主角挥拳？小技能/adventurer-punch-12.png" id="26_y07qb"]
[ext_resource type="Texture2D" uid="uid://dopccv2s8m3kq" path="res://Assets/主角/空手跳跃/adventurer-fall-00.png" id="41_y8to0"]
[ext_resource type="Texture2D" uid="uid://cxjkcgvypg1ac" path="res://Assets/主角/空手跳跃/adventurer-fall-01.png" id="42_5vo8g"]
[ext_resource type="Texture2D" uid="uid://dwygoxr2nq2lh" path="res://Assets/主角/空手idle/adventurer-idle-00.png" id="47_w5axw"]
[ext_resource type="Texture2D" uid="uid://cxq735vavny58" path="res://Assets/主角/空手idle/adventurer-idle-01.png" id="48_2gwnh"]
[ext_resource type="Texture2D" uid="uid://phwd5whqwwqs" path="res://Assets/主角/空手idle/adventurer-idle-02.png" id="49_6s5yb"]
[ext_resource type="Texture2D" uid="uid://cua601odwevr7" path="res://Assets/主角/空手idle/adventurer-idle-03.png" id="50_op78e"]
[ext_resource type="Texture2D" uid="uid://c6kha45lyccel" path="res://Assets/主角/空手跳跃/adventurer-jump-00.png" id="51_4oq1b"]
[ext_resource type="Texture2D" uid="uid://i1nd7fokupxj" path="res://Assets/主角/空手跳跃/adventurer-jump-01.png" id="52_ta47a"]
[ext_resource type="Texture2D" uid="uid://cma6xx0t6qp8i" path="res://Assets/主角/空手跳跃/adventurer-jump-02.png" id="53_6v1ow"]
[ext_resource type="Texture2D" uid="uid://bsxakkdqpyf0a" path="res://Assets/主角/空手跳跃/adventurer-jump-03.png" id="54_f2r1p"]
[ext_resource type="Texture2D" uid="uid://bacw7i5pgrn2e" path="res://Assets/主角/主角奔跑/adventurer-run2-00.png" id="61_al1hg"]
[ext_resource type="Texture2D" uid="uid://bwhybgay6gq1k" path="res://Assets/主角/主角奔跑/adventurer-run2-01.png" id="62_8co7j"]
[ext_resource type="Texture2D" uid="uid://bpuhjry8j248l" path="res://Assets/主角/主角奔跑/adventurer-run2-02.png" id="63_pm5nx"]
[ext_resource type="Texture2D" uid="uid://bm116yjawjcf8" path="res://Assets/主角/主角奔跑/adventurer-run2-03.png" id="64_8cvkf"]
[ext_resource type="Texture2D" uid="uid://blmq40beh58tu" path="res://Assets/主角/主角奔跑/adventurer-run2-04.png" id="65_8ewrp"]
[ext_resource type="Texture2D" uid="uid://dlj5o4jih35e2" path="res://Assets/主角/主角奔跑/adventurer-run2-05.png" id="66_la6u7"]
[ext_resource type="Script" uid="uid://cmyjemwoupgsj" path="res://Scripts/Core/StateMachine.gd" id="68_uytvf"]
[ext_resource type="Script" uid="uid://dapsb5f8qy5ai" path="res://Scripts/Core/HurtBox.gd" id="69_s7lb4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ed4yo"]
radius = 7.0
height = 38.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfbt0"]
size = Vector2(30, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wosd6"]
size = Vector2(35, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkrn1"]
size = Vector2(26, 23)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i10l2"]
radius = 6.0
height = 36.0

[sub_resource type="Animation" id="Animation_ed4yo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("47_w5axw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Hitbox/AttackShape1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Hitbox/AttackShape2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/Hitbox/AttackShape3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ujsok"]
resource_name = "attack_unarmed"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("14_opjds"), ExtResource("15_6626w"), ExtResource("16_867uf"), ExtResource("17_6ilcf"), ExtResource("18_6id3a"), ExtResource("19_w1x0d"), ExtResource("20_ovjwc"), ExtResource("21_jawh0"), ExtResource("22_jq6en"), ExtResource("23_1g8ls"), ExtResource("24_4wp3f"), ExtResource("25_x1vvj"), ExtResource("26_y07qb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Hitbox/AttackShape1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Hitbox/AttackShape2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/Hitbox/AttackShape3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_l3y8b"]
resource_name = "fall"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("41_y8to0"), ExtResource("42_5vo8g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Hitbox/AttackShape1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Hitbox/AttackShape2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/Hitbox/AttackShape3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s7lb4"]
resource_name = "idle_unarmed"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("47_w5axw"), ExtResource("48_2gwnh"), ExtResource("49_6s5yb"), ExtResource("50_op78e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Hitbox/AttackShape1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Hitbox/AttackShape2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/Hitbox/AttackShape3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6f3s4"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("51_4oq1b"), ExtResource("52_ta47a"), ExtResource("53_6v1ow"), ExtResource("54_f2r1p")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Hitbox/AttackShape1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Hitbox/AttackShape2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/Hitbox/AttackShape3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fsa4a"]
resource_name = "run_unarmed"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("61_al1hg"), ExtResource("62_8co7j"), ExtResource("63_pm5nx"), ExtResource("64_8cvkf"), ExtResource("65_8ewrp"), ExtResource("66_la6u7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Hitbox/AttackShape1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Hitbox/AttackShape2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/Hitbox/AttackShape3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l3y8b"]
_data = {
&"RESET": SubResource("Animation_ed4yo"),
&"attack_unarmed": SubResource("Animation_ujsok"),
&"fall": SubResource("Animation_l3y8b"),
&"idle_unarmed": SubResource("Animation_s7lb4"),
&"jump": SubResource("Animation_6f3s4"),
&"run_unarmed": SubResource("Animation_fsa4a")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_rpqav")

[node name="Graphics" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Graphics"]
position = Vector2(0, -24)
scale = Vector2(1.04, 1.25676)
texture = ExtResource("47_w5axw")

[node name="Hurtbox" type="Area2D" parent="Graphics"]
collision_layer = 8
collision_mask = 0
script = ExtResource("69_s7lb4")
metadata/_custom_type_script = "uid://dapsb5f8qy5ai"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/Hurtbox"]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_ed4yo")

[node name="Hitbox" type="Area2D" parent="Graphics"]
collision_layer = 0
collision_mask = 16
script = ExtResource("4_xixlo")
metadata/_custom_type_script = "uid://3u66cb4a4hqt"

[node name="AttackShape1" type="CollisionShape2D" parent="Graphics/Hitbox"]
position = Vector2(5, -18)
shape = SubResource("RectangleShape2D_bfbt0")
disabled = true

[node name="AttackShape2" type="CollisionShape2D" parent="Graphics/Hitbox"]
position = Vector2(3.5, -21.5)
shape = SubResource("RectangleShape2D_wosd6")
disabled = true

[node name="AttackShape3" type="CollisionShape2D" parent="Graphics/Hitbox"]
position = Vector2(7, -19.5)
shape = SubResource("RectangleShape2D_hkrn1")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_i10l2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l3y8b")
}

[node name="coyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpRequestTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("68_uytvf")
metadata/_custom_type_script = "uid://cmyjemwoupgsj"
